<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_label">
    <ListPreference
        android:defaultValue="@string/default_screensaver_mode"
        android:dialogTitle="@string/screensaver_mode"
        android:entries="@array/screensaver_mode_entries"
        android:entryValues="@array/screensaver_mode_values"
        android:key="screensaver_mode"
        android:title="@string/screensaver_mode" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="screensaver_night_mode"
        android:summary="@string/night_mode_summary"
        android:title="@string/night_mode_title" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="display_date_alarm"
        android:summary="@string/display_date_alarm_summary"
        android:title="@string/display_date_alarm_title" />

    <ListPreference
        android:defaultValue="@string/default_animation_style"
        android:dialogTitle="@string/animation_style"
        android:entries="@array/animation_style_entries"
        android:entryValues="@array/animation_style_values"
        android:key="screensaver_animation_style"
        android:title="@string/animation_style" />
</PreferenceScreen>
